# Libraries

./: ..gitignore.un~  .gitignore  CONTRIBUTING.md  LICENSE  VariableNaming.txt
C++/Nix/Adaptations/Timer/: CMakeLists.txt  FindTimer.cmake  Timer.cpp  Timer.h  install_timer.sh
C++/Nix/Adaptations/Timer/include/: Timer.h
C++/Nix/Adaptations/Timer/src/: Timer.cpp
C++/Nix/Iterator/: CMakeLists.txt  FindIterator.cmake  Iterator.cpp  Iterator.h  install_iter.sh
C++/Nix/OS/lib/: CMakeLists.txt  FindOS.cmake  install.sh  install_OS.sh
C++/Nix/OS/lib/include/: OS.h
C++/Nix/OS/lib/src/: OS.cpp
C++/Nix/SYS/lib/: CMakeLists.txt  FindSYS.cmake
C++/Nix/SYS/lib/include/: SYS.h
C++/Nix/ac/examples/: CMakeLists.txt  ex_ac  ex_ac.cpp  run.sh  test.sh
C++/Nix/ac/examples/include/: ex_basics.h  fuzz_dice.h  fuzz_slice.h
C++/Nix/ac/lib/: CMakeLists.txt  Findac.cmake
C++/Nix/ac/lib/include/: ac.h
C++/Nix/mc/examples/: CMakeLists.txt  ex_mc  ex_mc.cpp  run.sh  test.sh
C++/Nix/mc/lib/: CMakeLists.txt  Findmc.cmake
C++/Nix/mc/lib/include/: mc.h
C++/Nix/mc/lib/src/: mc.cpp
C++/Nix/re/examples/: CMakeLists.txt  ex_re.cpp  re.h  run.sh
C++/Nix/re/lib/: CMakeLists.txt  Findre.cmake  install.sh
C++/Nix/re/lib/include/: re.h
C++/Nix/re/lib/src/: re.cpp
C++/Windows/General_Purpose_Libs/OS/: CMakeLists.txt  FindOS.cmake  install.ps1
C++/Windows/General_Purpose_Libs/OS/examples/: CMakeLists.txt  run.ps1
C++/Windows/General_Purpose_Libs/OS/include/: OS.h
C++/Windows/General_Purpose_Libs/OS/src/: OS.cpp
C++/Windows/eXtended_STL/xvector/: CMakeLists.txt  Findxvector.cmake  install.ps1
C++/Windows/eXtended_STL/xvector/examples/: CMakeLists.txt  run.ps1
C++/Windows/eXtended_STL/xvector/include/: const_xvector.h  val_xvector.h  xvector.h
C++/Windows/eXtended_STL/xvector/src/: const_xvector.cpp  val_xvector.cpp
C++/Windows/functional_STL/mc/: CMakeLists.txt  Findmc.cmake  install.ps1
C++/Windows/functional_STL/mc/examples/: CMakeLists.txt  run.ps1
C++/Windows/functional_STL/mc/include/: mc.h
C++/Windows/functional_STL/mc/src/: mc.cpp
C++/Xplatform/General_Purpose_Libs/Iterator/: CMakeLists.txt  FindIterator.cmake  install.ps1
C++/Xplatform/General_Purpose_Libs/JSON/: CMakeLists.txt  FindJSON.cmake  install.ps1
C++/Xplatform/General_Purpose_Libs/Nexus/: CMakeLists.txt  FindNexus.cmake  install.ps1
C++/Xplatform/General_Purpose_Libs/Nexus/Examples/: CMakeLists.txt  run.ps1
C++/Xplatform/General_Purpose_Libs/Nexus/examples/: CMakeLists.txt  outline.txt  run.ps1
C++/Xplatform/General_Purpose_Libs/OS/: CMakeLists.txt  FindOS.cmake  install.ps1
C++/Xplatform/General_Purpose_Libs/OS/Examples/: CMakeLists.txt  run.ps1
C++/Xplatform/General_Purpose_Libs/OS/examples/: CMakeLists.txt  run.ps1
C++/Xplatform/General_Purpose_Libs/SYS/: CMakeLists.txt  FindSYS.cmake  install.ps1
C++/Xplatform/General_Purpose_Libs/SYS/Examples/: CMakeLists.txt  Execute.ps1  run.ps1
C++/Xplatform/General_Purpose_Libs/SYS/examples/: CMakeLists.txt  execute.ps1  run.ps1
C++/Xplatform/General_Purpose_Libs/Socket/: CMakeLists.txt  FindSocket.cmake  install.ps1
C++/Xplatform/General_Purpose_Libs/Socket/Examples/: CMakeLists.txt  run.ps1
C++/Xplatform/General_Purpose_Libs/Stash/: CMakeLists.txt  FindStash.cmake  install.ps1
C++/Xplatform/General_Purpose_Libs/Stash/Examples/: CMakeLists.txt  run.ps1
C++/Xplatform/General_Purpose_Libs/Timer/: CMakeLists.txt  FindTimer.cmake  install.ps1
C++/Xplatform/General_Purpose_Libs/Timer/Examples/: CMakeLists.txt  CmakeLists.txt  run.ps1
C++/Xplatform/General_Purpose_Libs/Timer/examples/: CmakeLists.txt  run.ps1
C++/Xplatform/Modded_Objects/cc/: CMakeLists.txt  Findcc.cmake  install.ps1
C++/Xplatform/Modded_Objects/cc/Examples/: CMakeLists.txt  run.ps1
C++/Xplatform/Modded_Objects/cc/examples/: CMakeLists.txt  run.ps1
CPP/BuildScripts/AllExamples/: CMakeLists.txt  InstallExamples.ps1  InstallSourceFiles.ps1
CPP/GPU/CudaBridge/: CMakeLists.txt  FindCudaBridge.cmake
CPP/GPU/CudaBridge/Examples/: CMakeLists.txt
CPP/GPU/CudaBridge/Project/include/: CudaBridge.cuh
CPP/GPU/CudaBridge/Project/src/: CudaBridge.cu
CPP/GPU/ImportCUDA/: CMakeLists.txt  FindImportCUDA.cmake  install.ps1
CPP/GPU/ImportCUDA/Project/include/: Allocate.cuh  BasicCUDA.cuh  Device.cuh  Host.cuh  ImportCUDA.cuh  Mutex.cuh  Timer.cuh
CPP/GPU/ImportCUDA/Project/src/: BasicCUDA.cu  Device.cu  Host.cu  ImportCUDA.cu  Timer.cu
CPP/GPU/Stats/: CMakeLists.txt  CreateHardLinks.ps1  FindHostStats.cmake  FindStats.cmake  install.ps1
CPP/GPU/Stats/Examples/CudaExamples/: CMakeLists.txt  cpp.hint
CPP/GPU/Stats/Examples/HostExamples/: CMakeLists.txt  run.ps1
CPP/GPU/Stats/Project/include/: AVG.cuh  Deviation.cuh  Normals.cuh  Omaha.cuh  RSI.cuh  STOCH.cuh  Stats.cuh  StatsCPU.cuh  StatsGPU.cuh  Support.cuh  ZEA.cuh
CPP/GPU/Stats/Project/src/: AVG.cu  Deviation.cu  Normals.cu  Omaha.cu  RSI.cu  STOCH.cu  Stats.cu  StatsCPU.cu  StatsGPU.cu  ZEA.cu
CPP/GeneralPurposeLibs/CudaBridge/: CMakeLists.txt  FindCudaBridge.cmake  install.ps1
CPP/GeneralPurposeLibs/CudaBridge/Examples/: CMakeLists.txt  run.ps1
CPP/GeneralPurposeLibs/CudaBridge/Project/include/: Allocate.cuh  CudaBridge.cuh  CudaImport.cuh  Device.cuh  Host.cuh  Mutex.cuh  Timer.cuh
CPP/GeneralPurposeLibs/CudaBridge/Project/src/: Allocate.cu  CudaBridge.cu  Device.cu  Host.cu  Mutex.cu  Timer.cu
CPP/GeneralPurposeLibs/JSON/: CMakeLists.txt  FindJSON.cmake  install.ps1
CPP/GeneralPurposeLibs/JSON/Project/include/: JSON.h
CPP/GeneralPurposeLibs/JSON/Project/src/: JSON.cpp
CPP/GeneralPurposeLibs/Stash/: CMakeLists.txt  FindStash.cmake  install.ps1
CPP/GeneralPurposeLibs/Stash/Examples/: CMakeLists.txt  run.ps1
CPP/GeneralPurposeLibs/Stash/Project/include/: Stash.h
CPP/GeneralPurposeLibs/Stash/Project/src/: Stash.cpp
CPP/GeneralPurposeLibs/Timer/: CMakeLists.txt  FindTimer.cmake  install.ps1
CPP/GeneralPurposeLibs/Timer/Examples/: CMakeLists.txt  run.ps1
CPP/GeneralPurposeLibs/Timer/Project/include/: Timer.h
CPP/GeneralPurposeLibs/Timer/Project/src/: Timer.cpp
(+1249 files in other folders)
